--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,16 @@
 services:
-  - type: web
-    name: shaphoto-api
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
-    envVars:
-      - key: SUPABASE_URL
-        sync: false
-      - key: SUPABASE_KEY
-        sync: false
-      - key: FLASK_ENV
-        value: production
-      - key: FLASK_DEBUG
-        value: false 
+- type: web
+  name: momphotos
+  runtime: python
+  repo: https://github.com/owenshapw/momphotos
+  plan: free
+  envVars:
+  - key: SUPABASE_KEY
+    sync: false
+  - key: SUPABASE_URL
+    sync: false
+  region: oregon
+  buildCommand: pip install -r requirements.txt
+  startCommand: python3 app.py
+  autoDeployTrigger: commit
+version: "1"
