--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.0.4
   cached_network_image: ^3.3.0
   photo_view: ^0.14.0
+  exif: ^3.3.0
   
   # UI components
   flutter_staggered_grid_view: ^0.7.0
