--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,5 +39,13 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+
+    # 解决 permission_handler 的 CTCarrier 警告（iOS 16 废弃）
+    target.build_configurations.each do |config|
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        'PERMISSION_PHONE=0',  # ⛔️ 屏蔽 Phone 权限
+      ]
+    end
   end
 end
