--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==3.0.2
 packaging==25.0
 pillow==11.3.0
 PyJWT==2.10.1
+python-dotenv==1.1.1
 requests==2.32.4
 urllib3==2.5.0
 Werkzeug==3.1.3
