更改默认用户密码

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: momphoto
+name: momphotos
 description: "A photo management app with cloud storage and tagging features."
 publish_to: 'none'
 
