--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
 - type: web
   name: momphotos
-  runtime: python
+  env: python
   repo: https://github.com/owenshapw/momphotos
   plan: free
   envVars:
@@ -9,8 +9,10 @@ services:
     sync: false
   - key: SUPABASE_URL
     sync: false
+  - key: PYTHON_VERSION
+    value: 3.9.0
   region: oregon
   buildCommand: pip install -r requirements.txt
-  startCommand: "gunicorn app:app"
+  startCommand: gunicorn app:app
   autoDeployTrigger: commit
 version: "1"
