--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   permission_handler: ^11.3.0
   shared_preferences: ^2.2.2
   supabase_flutter: ^2.9.1
+  
+  # Image saving
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
